fixes alignment on showpage and removes uneccesary code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,6 +192,7 @@
     grid-template-columns: auto auto;
     grid-gap: 1rem;
     padding-bottom: 20px;
+    border:
   }
   
   #show-page div:nth-child(even) {
